--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --second-background-color: #f4f4fd;
   --light-color-text-logo: #e7e9fc;
   --borders-customer-images: #8E8F99;
+  --active-link-color-bg: #31D0AA;
 }
 
 body {
@@ -101,6 +102,12 @@ h1, h2, h3, p, ul {
   margin-left: 40px;
 }
 
+.auth-nav .mail:hover,
+.auth-nav .mail:focus {
+  color: var(--active-link-color);
+}
+
+
 .auth-nav-link {
   font-size: 16px;
   line-height: 1.5;
@@ -113,7 +120,6 @@ h1, h2, h3, p, ul {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--active-link-color);
-  color: rgba(0, 0, 0, 0.8);
 }
 
 .hero {
@@ -324,6 +330,11 @@ h1, h2, h3, p, ul {
   fill: var(--main-logo-color);
 }
 
+.team-social-links:hover,
+.team-social-links:focus {
+  fill: var(--active-link-color);
+}
+
 .team-links {
   display: flex;
   padding-left: 16px;
@@ -340,35 +351,52 @@ h1, h2, h3, p, ul {
 }
 
 
+/* --------------customers-------------------- */
 
-.customers-title {
+.customers {
   padding-top: 130px;
-  padding-bottom: 72px;
-}
-
-.customers-link {
-  display: flex;
   padding-bottom: 120px;
 }
 
-.customers-logo {
-  max-width: 168px;
-  height: 88px;
-  border: 1px solid var(--borders-customer-images);
-  border-radius: 5px;
+.customers-title {
+  margin-bottom: 72px;
 }
 
-.customers-link .item {
+.customers-list {
+  display: flex;
+}
+
+.customers-list .item {
+  width: 168px;
+  height: 88px;
+
   width: calc((100% - 120px) / 6);
   margin-right: 24px;
 }
 
-.customers-link .item:last-child {
+.customers-list .item:last-child {
   margin-right: 0;
+}
+.customers-link {
+  display: flex;
+
+  width: 100%;
+  height: 100%;
+
+  fill:var(--borders-customer-images);;
+  border: 1px solid var(--borders-customer-images);
+  border-radius: 5px;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  fill: var(--active-link-color);
+  border: 1px solid var(--active-link-color);
 }
 
 
 
+/* --------------FOOTER-------------------- */
 
 .footer {
   padding-top: 100px;
@@ -390,8 +418,15 @@ h1, h2, h3, p, ul {
 .text-footer {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--light-color-text-logo);
   margin-top: 16px;
+}
+
+.text-footer-social {
+  font-weight: 500;
+  color: var(--white-text-color);
+  margin-top: 0;
 }
 
 .main-container-footer {
@@ -405,13 +440,18 @@ h1, h2, h3, p, ul {
 }
 
 .social-footer p {
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .footer-social-links {
   width: 40px;
   height: 40px;
-  fill: rgba(255, 255, 255, 0.1);
+  fill: var(--main-logo-color);
+}
+
+.footer-social-links:hover,
+.footer-social-links:focus {
+  fill: var(--active-link-color-bg);
 }
 
 .footer-links {
@@ -485,7 +525,7 @@ h1, h2, h3, p, ul {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  border: 1px solid var(--light-color-text-logo);
+  
 }
 
 .work-list {
@@ -497,6 +537,8 @@ h1, h2, h3, p, ul {
   width: calc((100% - 48px) / 3);
   margin-right: 24px;
   margin-bottom: 48px;
+
+  border: 1px solid var(--light-color-text-logo);
 }
 
 .work-list .item:nth-child(3n) {
